--- a/cadastroconta².html
+++ b/cadastroconta².html
@@ -98,7 +98,21 @@ button:hover {
 
 <script>
 
+function formatarnimero(input) {
+            let value = input.value.replace(/\D/g, '');
 
+            if (value.length > 10) {
+                value = value.replace(/^(\d{2})(\d{5})(\d{4}).*/, '($1) $2-$3');
+            } else if (value.length > 6) {
+                value = value.replace(/^(\d{2})(\d{4})(\d{0,4}).*/, '($1) $2-$3');
+            } else if (value.length > 2) {
+                value = value.replace(/^(\d{2})(\d{0,5})/, '($1) $2');
+            } else {
+                value = value.replace(/^(\d*)/, '($1');
+            }
+
+            input.value = value;
+        }
     
 </script>
 
@@ -112,7 +126,7 @@ button:hover {
             <input type="text" id="name" name="name" required placeholder="nome completo"><br>
 
             <label for="tele">Número de Telefone:</label>
-            <input type="tel" oninput="this.value = this.value.replace(/[^0-9.\-()'']/g, '').replace(/(\..*?)\..*/g, '$1');" 
+            <input type="tel" oninput="formatarnimero(this)" 
             min="0" id="tele" name="tele" required placeholder="(xx) xxxxx-xxxx"><br>
 
             <label for="deposito">Valor inicial de deposito:</label>
