--- a/cadastroconta².html
+++ b/cadastroconta².html
@@ -112,7 +112,14 @@ function formatarnimero(input) {
             }
 
             input.value = value;
-        }
+}
+function formatarovalor(input) {
+    let value = input.value.replace(/\D/g, '');
+    value = (value / 100).toFixed(2) + '';
+    value = value.replace(".", ",");
+    value = value.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+    input.value = 'R$ ' + value;
+}
     
 </script>
 
@@ -130,7 +137,7 @@ function formatarnimero(input) {
             min="0" id="tele" name="tele" required placeholder="(xx) xxxxx-xxxx"><br>
 
             <label for="deposito">Valor inicial de deposito:</label>
-            <input type="text" oninput="this.value = this.value.replace(/[^0-9.,]/g, '').replace(/(\..*?)\..*/g, '$1');" 
+            <input type="text" oninput="formatarovalor(this)" 
             id="deposito" name="deposito" step="0.01" min="0.0"  ><br>
 
             <label>Qual tipo de conta:</label>
