--- a/cadastroconta.html
+++ b/cadastroconta.html
@@ -104,7 +104,6 @@ button:hover {
 
 <body>
         
-    </script>
     
 
     <div class="container">
@@ -141,4 +140,15 @@ button:hover {
         print("Hello, world!")
     </script>
 </body>
+
+          <!--  input.value = value;
+}
+function formatarovalor(input) {
+    let value = input.value.replace(/\D/g, '');
+    value = (value / 100).toFixed(2) + '';
+    value = value.replace(".", ",");
+    value = value.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+    input.value = value;
+}-->
+
 </html>
